gff/y.output
Grammar

    0 $accept: Gram $end

    1 Gram: tokens PP prods

    2 tokens: tokens KEYWD_TOK toklist
    3       | tokens KEYWD_START IDENT
    4       | %empty

    5 toklist: toklist IDENT
    6        | IDENT

    7 prods: prods prod
    8      | %empty

    9 $@1: %empty

   10 prod: IDENT $@1 COLON body_list SEMI

   11 body_list: body_list BAR body
   12          | body

   13 body: body IDENT
   14     | body TOKEN
   15     | %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    KEYWD_TOK (258) 2
    KEYWD_START (259) 3
    TOKEN (260) 14
    IDENT (261) 3 5 6 10 13
    COLON (262) 10
    SEMI (263) 10
    BAR (264) 11
    PP (265) 1


Nonterminals, with rules where they appear

    $accept (11)
        on left: 0
    Gram (12)
        on left: 1
        on right: 0
    tokens (13)
        on left: 2 3 4
        on right: 1 2 3
    toklist (14)
        on left: 5 6
        on right: 2 5
    prods (15)
        on left: 7 8
        on right: 1 7
    prod (16)
        on left: 10
        on right: 7
    $@1 (17)
        on left: 9
        on right: 10
    body_list <prod_list> (18)
        on left: 11 12
        on right: 10 11
    body <prod_body> (19)
        on left: 13 14 15
        on right: 11 12 13 14


State 0

    0 $accept: . Gram $end

    $default  reduce using rule 4 (tokens)

    Gram    go to state 1
    tokens  go to state 2


State 1

    0 $accept: Gram . $end

    $end  shift, and go to state 3


State 2

    1 Gram: tokens . PP prods
    2 tokens: tokens . KEYWD_TOK toklist
    3       | tokens . KEYWD_START IDENT

    KEYWD_TOK    shift, and go to state 4
    KEYWD_START  shift, and go to state 5
    PP           shift, and go to state 6


State 3

    0 $accept: Gram $end .

    $default  accept


State 4

    2 tokens: tokens KEYWD_TOK . toklist

    IDENT  shift, and go to state 7

    toklist  go to state 8


State 5

    3 tokens: tokens KEYWD_START . IDENT

    IDENT  shift, and go to state 9


State 6

    1 Gram: tokens PP . prods

    $default  reduce using rule 8 (prods)

    prods  go to state 10


State 7

    6 toklist: IDENT .

    $default  reduce using rule 6 (toklist)


State 8

    2 tokens: tokens KEYWD_TOK toklist .
    5 toklist: toklist . IDENT

    IDENT  shift, and go to state 11

    $default  reduce using rule 2 (tokens)


State 9

    3 tokens: tokens KEYWD_START IDENT .

    $default  reduce using rule 3 (tokens)


State 10

    1 Gram: tokens PP prods .
    7 prods: prods . prod

    IDENT  shift, and go to state 12

    $default  reduce using rule 1 (Gram)

    prod  go to state 13


State 11

    5 toklist: toklist IDENT .

    $default  reduce using rule 5 (toklist)


State 12

   10 prod: IDENT . $@1 COLON body_list SEMI

    $default  reduce using rule 9 ($@1)

    $@1  go to state 14


State 13

    7 prods: prods prod .

    $default  reduce using rule 7 (prods)


State 14

   10 prod: IDENT $@1 . COLON body_list SEMI

    COLON  shift, and go to state 15


State 15

   10 prod: IDENT $@1 COLON . body_list SEMI

    $default  reduce using rule 15 (body)

    body_list  go to state 16
    body       go to state 17


State 16

   10 prod: IDENT $@1 COLON body_list . SEMI
   11 body_list: body_list . BAR body

    SEMI  shift, and go to state 18
    BAR   shift, and go to state 19


State 17

   12 body_list: body .
   13 body: body . IDENT
   14     | body . TOKEN

    TOKEN  shift, and go to state 20
    IDENT  shift, and go to state 21

    $default  reduce using rule 12 (body_list)


State 18

   10 prod: IDENT $@1 COLON body_list SEMI .

    $default  reduce using rule 10 (prod)


State 19

   11 body_list: body_list BAR . body

    $default  reduce using rule 15 (body)

    body  go to state 22


State 20

   14 body: body TOKEN .

    $default  reduce using rule 14 (body)


State 21

   13 body: body IDENT .

    $default  reduce using rule 13 (body)


State 22

   11 body_list: body_list BAR body .
   13 body: body . IDENT
   14     | body . TOKEN

    TOKEN  shift, and go to state 20
    IDENT  shift, and go to state 21

    $default  reduce using rule 11 (body_list)
